--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "release": "git checkout master && git pull && auto-changelog -p && git checkout development"
   },
   "private": true,
   "dependencies": {
