--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "release": "git checkout master && git pull && auto-changelog -p && git checkout development"
+    "release": "git checkout master && git pull && auto-changelog -p && git add . && git commit -m 'new release' && git push && git checkout development && auto-changelog -p"
   },
   "private": true,
   "dependencies": {
