--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "release": "git checkout master && git pull && auto-changelog -p && git add . && git commit -m 'new release' && git push && git checkout development && auto-changelog -p"
+    "release": "git checkout master && git pull && auto-changelog -p && git add . && git commit -m 'new release' && git push && git checkout development && auto-changelog -p",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -27,8 +28,11 @@
     "@angular-devkit/build-angular": "~13.1.2",
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "husky": "^8.0.0",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
