--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -39,6 +39,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "standard-version": "^9.5.0",
     "typescript": "~4.5.2"
   }
 }
